<?xml version="1.0"?>
<package format="3">
  <name>xv_11_laser_driver</name>
  <version>0.1.0</version>
  <description>ROS 2 port of the Neato XV-11 LiDAR driver</description>

  <maintainer email="palmierijpablo@gmail.com">Pablo Juarez Palmieri</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>boost</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
